[package]
name = "salvo_lream"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.76.2", features = ["jwt-auth","oapi"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "chrono", "serde_json"]}
tokio = { version = "1.43.0", features = ["full"] }

chrono = "0.4.40"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
serde_json = "1.0.139"
# log 输出
tracing = "0.1"
tracing-subscriber = "0.3.19"
jsonwebtoken = "*"